--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/cs188-software-design-security-w20/project-lumberjacks/issues"
   },
-  "homepage": "https://github.com/cs188-software-design-security-w20/project-lumberjacks#readme"
+  "homepage": "https://github.com/cs188-software-design-security-w20/project-lumberjacks#readme",
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
+  }
 }
