--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,11 +25,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
+    "@babel/plugin-syntax-jsx": "^7.8.3",
+    "@babel/plugin-transform-react-display-name": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
+    "core-js": "^3.6.4",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.19.1",
+    "terser-webpack-plugin": "^2.3.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
