--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "yarn webpack-dev-server --env.mode development --hot"
+    "dev": "yarn webpack-dev-server --env.mode development --hot",
+    "build": "yarn webpack --env.mode production"
   },
   "repository": {
     "type": "git",
