--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/cs188-software-design-security-w20/project-lumberjacks#readme",
   "dependencies": {
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
