--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "yarn webpack-dev-server --env.mode development --hot",
+    "dev-debug": "yarn webpack-dev-server --env.mode development --env.debug --progress --hot",
     "build": "yarn webpack --env.mode production"
   },
   "repository": {
