--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,15 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "css-loader": "^3.4.2",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-svg-loader": "^3.0.3",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "style-loader": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
