--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,10 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "compression": "^1.7.4",
     "css-loader": "^3.4.2",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
