--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,12 +7,6 @@ RUN npm install -g yarn
 RUN yarn
 
 COPY . .
-RUN yarn run build
+RUN yarn build
 
 CMD ["node", "server.js"]
-
-# prod env
-# FROM nginx:alpine
-# COPY ./nginx/default.conf /etc/nginx/conf.default
-# COPY --from=builder /app/bin /usr/share/nginx/html
-# CMD ["nginx", "-g", "daemon off;"]
